share/test/regression/type_check/fail/issue_45d.v
// reg can't have a recursive definition

reg A=A;
